Revert " EIP-6110: Add deposit validation and apis (#5295)"
This reverts commit ea8fbc21b759f232caab415f2e079c21dbb680df.